--- a/RentalKendaraan/Views/Genders/Index.cshtml
+++ b/RentalKendaraan/Views/Genders/Index.cshtml
@@ -13,23 +13,24 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.NamaGender)
+                @Html.DisplayName("NamaGender")
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.NamaGender)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdGender">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdGender">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdGender">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NamaGender)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.IdGender"><i class="fa fa-marker fa-lg"></i></a> |
+                    <a asp-action="Details" asp-route-id="@item.IdGender"><i class="fas fa-list"></i></a> |
+                    <a asp-action="Delete" asp-route-id="@item.IdGender"><i class="fa fa-trash-alt fa-lg"></i></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
