--- a/RentalKendaraan/Views/Customers/Index.cshtml
+++ b/RentalKendaraan/Views/Customers/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<RentalKendaraan.Models.Customer>
+﻿@model PaginatedList<RentalKendaraan.Models.Customer>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Data Customer</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -23,19 +23,18 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayName("NamaCustomer")
-            </th>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Nama Customer</a>
             <th>
-                @Html.DisplayName("NIK")
+                @Html.DisplayName("No NIK")
             </th>
             <th>
                 @Html.DisplayName("Alamat")
             </th>
             <th>
-                @Html.DisplayName("No HP")
+                @Html.DisplayName("No. Hp")
             </th>
             <th>
-                @Html.DisplayName("IdGender")
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Id Gender</a>
             </th>
             <th></th>
         </tr>
@@ -68,3 +67,25 @@
         }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasilPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
+
