--- a/RentalKendaraan/Views/Jaminans/Index.cshtml
+++ b/RentalKendaraan/Views/Jaminans/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<RentalKendaraan.Models.Jaminan>
+﻿@model PaginatedList<RentalKendaraan.Models.Jaminan>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Data Jaminan</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -23,7 +23,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayName("NamaJaminan")
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Nama Jaminan</a>
             </th>
             <th></th>
         </tr>
@@ -44,3 +44,24 @@
         }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasilPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
