--- a/RentalKendaraan/Views/JenisKendaraans/Index.cshtml
+++ b/RentalKendaraan/Views/JenisKendaraans/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<RentalKendaraan.Models.JenisKendaraan>
+﻿@model PaginatedList<RentalKendaraan.Models.JenisKendaraan>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Data Jenis Kendaraan</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -23,7 +23,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayName("Nama Jenis Kendaraan")
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Jenis Kendaraan</a>
             </th>
             <th></th>
         </tr>
@@ -36,11 +36,32 @@
                     @Html.DisplayFor(modelItem => item.NamaJenisKendaraan)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.IdJenisKendaraan"><i class="fas fa-marker fa-lg"></i></a> |
+                    <a asp-action="Edit" asp-route-id="@item.IdJenisKendaraan"><i class="fa fa-marker fa-lg"></i></a> |
                     <a asp-action="Details" asp-route-id="@item.IdJenisKendaraan"><i class="fas fa-list"></i></a> |
-                    <a asp-action="Delete" asp-route-id="@item.IdJenisKendaraan"><i class="fas fa-trash fa-lg"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.IdJenisKendaraan"><i class="fa fa-trash-alt fa-lg"></i></a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasilPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
