--- a/RentalKendaraan/Views/Peminjamen/Index.cshtml
+++ b/RentalKendaraan/Views/Peminjamen/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<RentalKendaraan.Models.Peminjaman>
+﻿@model PaginatedList<RentalKendaraan.Models.Peminjaman>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Data Peminjaman</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -23,19 +23,19 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayName("TglPeminjaman")
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]"> Tanggal Peminjaman</a>
             </th>
             <th>
                 @Html.DisplayName("Biaya")
             </th>
             <th>
-                @Html.DisplayName("IdCustomer")
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Id Customer</a>
             </th>
             <th>
-                @Html.DisplayName("IdJaminan")
+                @Html.DisplayName("Id Jaminan")
             </th>
             <th>
-                @Html.DisplayName("IdKendaraan")
+                @Html.DisplayName("Id Kendaraan")
             </th>
             <th></th>
         </tr>
@@ -68,3 +68,23 @@
         }
     </tbody>
 </table>
+@{
+    var prevDisabled = !Model.HasilPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
