--- a/RentalKendaraan/Views/Pengembalians/Index.cshtml
+++ b/RentalKendaraan/Views/Pengembalians/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<RentalKendaraan.Models.Pengembalian>
+﻿@model PaginatedList<RentalKendaraan.Models.Pengembalian>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Data Pengembalian</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -23,16 +23,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayName("TglPengembalian")
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Tanggal Pengembalian</a>
             </th>
             <th>
-                @Html.DisplayName("Denda")
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Denda</a>
             </th>
             <th>
-                @Html.DisplayName("IdKondisi")
+                @Html.DisplayName("Id Kondisi")
             </th>
             <th>
-                @Html.DisplayName("IdPeminjaman")
+                @Html.DisplayName("Id Peminjaman")
             </th>
             <th></th>
         </tr>
@@ -62,3 +62,24 @@
         }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasilPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
