--- a/RentalKendaraan/Views/Shared/_Layout.cshtml
+++ b/RentalKendaraan/Views/Shared/_Layout.cshtml
@@ -20,8 +20,13 @@
                 <div class="navbar-collapse collapse ">
                     <ul class="navbar-nav">
                         <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+
+                        <li><a asp-area="" asp-controller="Upload" asp-action="Index">Upload</a></li>
+
                         <li class="dropdown">
+
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">DaftarRental<b class="caret"></b></a>
+
                             <ul class="dropdown-menu">
                                 <li><a asp-area="" asp-controller="Customers" asp-action="Index">Customer</a></li>
                                 <li><a asp-area="" asp-controller="Peminjamen" asp-action="Index">Peminjaman</a></li>
